--- a/Pond_AboutMe.html
+++ b/Pond_AboutMe.html
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
-                    <img src="images/cookies.jpg" width="200px" height="200px">
+                    <img src="images/bio.png" width="200px" height="200px">
                 </div>
                 <div class="col-sm-9">
                     <p> 
@@ -62,7 +62,6 @@
                 </div>
             </div>
         </div>
-        </div>
     </body>
     <footer>
         <div class="jumbotron col-sm-12"> 
@@ -72,7 +71,7 @@
                         <img src="images/face.png" height="100px"> </div>
                         <img src="images/insta.png" height="100px" width="100px">
                         <img class="ml-auto" src="images/twitter2.png" height="100px">
-                   
+                    </div>
                 </div>
             </div>
         </div>
