--- a/WorkExper.html
+++ b/WorkExper.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
-                    <img src="images/tempperson.png" width="200px" height="200px">
+                    <img src="images/bio.png" width="200px" height="200px">
                 </div>
                 <div class="col-sm-9">
                     <p>
@@ -72,12 +72,16 @@
                         work doesn't have to be laborious as long as one is 
                         willing to cooperate and respect one's coworkers to 
                         get work done. To reiterate, from these experiences I 
-                        have learnt to be respectful, cooperative worker.<br>
-                        From my volunteer experience .....
+                        have learnt to be respectful, cooperative worker.<br><br>
+                        From my volunteer experience that concerns, primarily,
+                        interacting with children I have bettered my patience 
+                        and communicative skills. I started volunteering at 
+                        Crosspoint Church in November of 2018. From my volunteer 
+                        work, I can confidently say that I would make cooperative
+                        and well-organized employee.
                     </p>
                 </div>
             </div>
-        </div>
         </div>
     </body>
     <footer>
@@ -88,7 +92,7 @@
                         <img src="images/face.png" height="100px"> </div>
                         <img src="images/insta.png" height="100px" width="100px">
                         <img class="ml-auto" src="images/twitter2.png" height="100px">
-                   
+                    </div>
                 </div>
             </div>
         </div>
