--- a/Enp.html
+++ b/Enp.html
@@ -11,7 +11,7 @@
               Home</a>
               <a class="nav-item nav-link" href="Pond_AboutMe.html">About Me</a>
               <a class="nav-item nav-link" href="res.html">Resume</a>
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" 
+              <a class="nav-link dropdown-toggle active" data-toggle="dropdown" 
               href="pro.html" role="button" aria-haspopup="true" aria-expanded="false">
                 Projects</a>
               <div class="dropdown-menu">
@@ -23,24 +23,40 @@
               </div>
               <a class="nav-item nav-link" href="WorkExper.html">Work Experience
               </a>
-              <a class="nav-item nav-link active" href="cm.html">Contact Me</a>
+              <a class="nav-item nav-link" href="cm.html">Contact Me</a>
             </nav>
         </div>
         <div class="jumbotron col-sm-12 text-center">
-           <h1>Contact Me</h1>
-           <p>Address: Dublin Claifornia</p>
-           <p>Email: maggiepond888@gmail.com</p>
+           <h1>Projects</h1>
+           <p>Work Experience at School</p>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-sm-3">
-                    <img src="images/cookies.jpg" width="200px" height="200px">
-                </div>
                 <div class="col-sm-9">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf5eCSl0FzuRbLOKM3k4qMy0lZ-2ODKBTOmdF7fSOt04Q8CdA/viewform?embedded=true" width="640" height="766" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                    <p> 
+                      <h1 class="text-center">Entrepreneurship Project</h1>
+                      <h5 class="text-center">(Project started May 11 2018 Completed May 23 2017, POE Period 7)</h5>
+                      The Entrepreneurship Project is a project assigned yearly to all engineering 
+                      students. It concerns the development of a new solution to solve a widely 
+                      experienced problem. Depending on the problem, the deliverables for this 
+                      project could range from a working prototype to a well developed idea for one.
+                      My team (team Wake up, Breakfast Robot!) choose to address oversleeping and 
+                      therefore skipping breakfast or consuming a substandard breakfast. We chose to
+                      solve this problem by building and programming a prototype that makes cereal, 
+                      brings it to the user, wakes the user, and gives them cereal. For this project
+                      I was a primary builder. I built the platform, attached the grabbing mechanism, 
+                      made and attached the multi directional wheels, and assisted in the build of 
+                      the poking mechanism. I organized the build and came in almost everyday during
+                      lunch or Gael to work on the robot. During this project I showed great leadership
+                      and perseverance as a primary builder for the project. <br><br>
+                      Documentation: <a href= "https://docs.google.com/document/d/1alpXOxPnaZ4BvAnP-zx7Tr4g0wFRf5iE3VTYQEgKao8/edit" target="_blank">Here</a><br>
+                      Presentation: <a href= "https://docs.google.com/presentation/d/141B3dfa11ksVmD9HN2Q_7-iqbVj-YkIgNcEtqy8ePXw/edit" target="_blank">Here</a>
+                    </p>
+                </div>
+                <div class="col-sm-3">
+                    <img src="images/cereal.jpg" width="200px" height="200px">
                 </div>
             </div>
-        </div>
         </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
@@ -55,7 +71,7 @@
                         <img src="images/face.png" height="100px"> </div>
                         <img src="images/insta.png" height="100px" width="100px">
                         <img class="ml-auto" src="images/twitter2.png" height="100px">
-                   
+                    </div>
                 </div>
             </div>
         </div>
