--- a/WorkExper.html
+++ b/WorkExper.html
@@ -6,11 +6,22 @@
     <body>
         <div class="container">
            <nav class="nav nav-pills nav-fill">
-              <a class="nav-item nav-link" href="index.html">Home Sweet Home</a>
+              <a class="nav-item nav-link" href="index.html">Home Sweet 
+              Home</a>
               <a class="nav-item nav-link" href="Pond_AboutMe.html">About Me</a>
               <a class="nav-item nav-link" href="res.html">Resume</a>
-              <a class="nav-item nav-link" href="pro.html">Projects</a>
-              <a class="nav-item nav-link active" href="WorkExper.html">Work Experience</a>
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" 
+              href="pro.html" role="button" aria-haspopup="true" aria-expanded="false">
+                Projects</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="Enp.html">Entrepreneurship Project</a>
+                <a class="dropdown-item" href="w.html">Winch Project</a>
+                <!--
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="pro.html">Projects</a> -->
+              </div>
+              <a class="nav-item nav-link active" href="WorkExper.html">Work Experience
+              </a>
               <a class="nav-item nav-link" href="cm.html">Contact Me</a>
             </nav>
         </div>
@@ -57,10 +68,11 @@
                         to emotional intelligence, or rather concern for 
                         one's coworkers. To me, the lecture on emotional 
                         intelligence was particularly important as the ability
-                        to respect one's coworkers is an essential but underesti
-                        mated skill. After this, we were shown around campus and
-                        what struck me most was how absolutely beautiful the 
-                        campus was and, to me it seemed, how little menial labor
+                        to respect one's coworkers is an essential but 
+                        underestimated skill. After this, we were shown around 
+                        campus and what struck me most was how absolutely 
+                        beautiful the campus was and, to me it seemed, how 
+                        little menial labor
                         was being performed even in the workplace areas. It also
                         struck me how employees were allowed to draw on the 
                         walls as a means of communication or play. Overall, 
@@ -78,11 +90,16 @@
                         and communicative skills. I started volunteering at 
                         Crosspoint Church in November of 2018. From my volunteer 
                         work, I can confidently say that I would make cooperative
-                        and well-organized employee.
+                        and well-organized employee capable even of assuming 
+                        leadership roles when necessary.
                     </p>
                 </div>
             </div>
         </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <script src="../../assets/js/vendor/holder.min.js"></script>
     </body>
     <footer>
         <div class="jumbotron col-sm-12"> 
