--- a/w.html
+++ b/w.html
@@ -11,7 +11,7 @@
               Home</a>
               <a class="nav-item nav-link" href="Pond_AboutMe.html">About Me</a>
               <a class="nav-item nav-link" href="res.html">Resume</a>
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" 
+              <a class="nav-link dropdown-toggle active" data-toggle="dropdown" 
               href="pro.html" role="button" aria-haspopup="true" aria-expanded="false">
                 Projects</a>
               <div class="dropdown-menu">
@@ -23,24 +23,41 @@
               </div>
               <a class="nav-item nav-link" href="WorkExper.html">Work Experience
               </a>
-              <a class="nav-item nav-link active" href="cm.html">Contact Me</a>
+              <a class="nav-item nav-link" href="cm.html">Contact Me</a>
             </nav>
         </div>
         <div class="jumbotron col-sm-12 text-center">
-           <h1>Contact Me</h1>
-           <p>Address: Dublin Claifornia</p>
-           <p>Email: maggiepond888@gmail.com</p>
+           <h1>Projects</h1>
+           <p>Work Experience at School</p>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-sm-3">
-                    <img src="images/cookies.jpg" width="200px" height="200px">
-                </div>
                 <div class="col-sm-9">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf5eCSl0FzuRbLOKM3k4qMy0lZ-2ODKBTOmdF7fSOt04Q8CdA/viewform?embedded=true" width="640" height="766" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                    <p> 
+                     <h1 class="text-center">Winch Project</h1>
+                     <h5 class="text-center">(Project 1.2.5, Started- October 16, 2017 Completed- October 20, 2017, POE period 7)</h5>
+                     For the 1.2.5 project, or ' Winch Project ', my teammates and I were to build
+                     a prototype for a large scale winch that was to be used by  local construction
+                     company. We were asked to build a winch using a Fisher Tech motor capable of 
+                     lifting a weight of at least 100 grams, 30 centimeters upward. We were limited
+                     to materials found in the classroom and or approved by the teacher. For this 
+                     project, I was responsible for the building and maintenance of the winch, 
+                     meaning that I was the one responsible for the winch's ability to pull the 
+                     weight upward. The first day was spent building the winch's skeleton and the 
+                     rest of the time was spent improving the winch. During the course of this 
+                     project, I came in everyday during Gael period to improve and modify the 
+                     mechanism. This required me to test multiple configurations of the winch and 
+                     fixing the winch when the mechanism failed. Although I was not the primary 
+                     builder or developer, I was persistent and unyielding in the optimization of 
+                     the winch. <br><br>
+                      Documentation: <a href= "https://docs.google.com/document/d/1zr722JBLGvn368AtzOZLZnid8byL4MBNttXDKlFORGo/edit" target="_blank">Here</a><br>
+                      Presentation: <a href= "https://docs.google.com/presentation/d/1Ca1DbJeaI5Gcf8gikZBT1j3RabulsRXq_iFcTt_J3Hc/edit" target="_blank">Here</a>
+                    </p>
+                </div>
+                <div class="col-sm-3">
+                    <img src="images/w.jpg" width="200px" height="200px">
                 </div>
             </div>
-        </div>
         </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
@@ -55,7 +72,7 @@
                         <img src="images/face.png" height="100px"> </div>
                         <img src="images/insta.png" height="100px" width="100px">
                         <img class="ml-auto" src="images/twitter2.png" height="100px">
-                   
+                    </div>
                 </div>
             </div>
         </div>
