--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link href="bootstrap-4.1.2-dist/css/bootstrap.css" type="text/css" 
         rel="stylesheet">
+        <link href="carousel.css" rel="stylesheet">
     </head>
     <body>
         <div class="container">
@@ -11,21 +12,19 @@
               Home</a>
               <a class="nav-item nav-link" href="Pond_AboutMe.html">About Me</a>
               <a class="nav-item nav-link" href="res.html">Resume</a>
-              <a class="nav-item nav-link" href="pro.html">Projects</a>
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" 
+              href="pro.html" role="button" aria-haspopup="true" aria-expanded="false">
+                Projects</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="Enp.html">Entrepreneurship Project</a>
+                <a class="dropdown-item" href="w.html">Winch Project</a>
+                <!--
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="pro.html">Projects</a> -->
+              </div>
               <a class="nav-item nav-link" href="WorkExper.html">Work Experience
               </a>
               <a class="nav-item nav-link" href="cm.html">Contact Me</a>
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" 
-              href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                Dropdown</a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Separated link</a>
-              </div>
-
             </nav>
             <div class="jumbotron col-sm-12">
               <h1>Maggie Pond's Portfolio </h1>
@@ -37,7 +36,56 @@
                <a href="Pond_AboutMe.html" class="active">More about me</a>
              </div>
           </div>
+          <!---Slideshow starts here-->
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="images/cereal.jpg" alt="First slide" height="600px">
+                  <div class="carousel-caption-bet">
+                    <h1>Maggie Pond's Portfolio </h1>
+                     <p>
+                      A creative, interpersonal individual, dedicated to optimal work 
+                      completion.
+                     </p>
+                     <a href="Pond_AboutMe.html"><button type="button" class="btn btn-primary">More About Me</button></a>
+                  </div>
+                </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/cookies.jpg" alt="Second slide" height="600px">
+                  <div class="carousel-caption-bet">
+                    <h1>Maggie Pond's Portfolio </h1>
+                     <p>
+                      A creative, interpersonal individual, dedicated to optimal work 
+                      completion.
+                     </p>
+                     <a href="Pond_AboutMe.html"><button type="button" class="btn btn-primary">More About Me</button></a>
+                  </div>
+                </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/firework.gif" alt="Third slide" height="600px">
+                <div class="carousel-caption-bet">
+                  <h1>Maggie Pond's Portfolio </h1>
+                  <p>
+                  A creative, interpersonal individual, dedicated to optimal work 
+                  completion.
+                  </p>
+                  <a href="Pond_AboutMe.html"><button type="button" class="btn btn-primary">More About Me</button></a>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+<!--experiment ends here-->
+            
         </div> 
+        <!--
         <div class="container">
           <div class="row">
             <div class="col-sm-6">
@@ -55,7 +103,7 @@
           <div class="col-sm-6">
             <div class="card">
               <div class="card-body">
-                <img class="card-img-right float-right" src="images/cookies.jpg" 
+                <img class="card-img-right float-right .custom-range::-webkit-slider-runnable-track" src="images/cookies.jpg" 
                 width="200px" height="200px">
                 <strong><h7>Skills and Assets</h7></strong>
                 <h3 class="card-title">Resume</h3>
@@ -90,9 +138,12 @@
             </div>
           </div>
         </div>
+        -->
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+      <script src="../../assets/js/vendor/holder.min.js"></script>
+      
     </body>
     <footer>
         <div class="container">
