--- a/pro.html
+++ b/pro.html
@@ -7,11 +7,22 @@
     <body>
         <div class="container">
            <nav class="nav nav-pills nav-fill">
-              <a class="nav-item nav-link" href="index.html">Home Sweet Home</a>
+              <a class="nav-item nav-link active" href="index.html">Home Sweet 
+              Home</a>
               <a class="nav-item nav-link" href="Pond_AboutMe.html">About Me</a>
               <a class="nav-item nav-link" href="res.html">Resume</a>
-              <a class="nav-item nav-link active" href="pro.html">Projects</a>
-              <a class="nav-item nav-link" href="WorkExper.html">Work Experience</a>
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" 
+              href="pro.html" role="button" aria-haspopup="true" aria-expanded="false">
+                Projects</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="Enp.html">Entrepreneurship Project</a>
+                <a class="dropdown-item" href="w.html">Winch Project</a>
+                <!--
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="pro.html">Projects</a> -->
+              </div>
+              <a class="nav-item nav-link" href="WorkExper.html">Work Experience
+              </a>
               <a class="nav-item nav-link" href="cm.html">Contact Me</a>
             </nav>
         </div>
@@ -76,6 +87,10 @@
                 </div>
             </div>
         </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <script src="../../assets/js/vendor/holder.min.js"></script>
     </body>
     <footer>
         <div class="jumbotron col-sm-12"> 
