--- a/Pond_Projects.html
+++ b/Pond_Projects.html
@@ -5,6 +5,7 @@
         <title>Maggie Pond Was Here</title>
     </head>
     <body>
+        <!--not used on website, just wanted to keep file if I wanted it for future projects-->
         <div class="container">
            <nav class="nav nav-pills nav-fill">
               <a class="nav-item nav-link active" href="index.html">Home Sweet 
@@ -92,6 +93,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <script src="../../assets/js/vendor/holder.min.js"></script>
     </body>
+    <!--footer starts here-->
     <footer>
         <div class="jumbotron col-sm-12"> 
             <div class="container">
@@ -105,4 +107,5 @@
             </div>
         </div>
     </footer>
+    <!--and ends here-->
 </html>
