--- a/Pond_WorkExperience.html
+++ b/Pond_WorkExperience.html
@@ -9,30 +9,33 @@
               <a class="nav-item nav-link" href="index.html">Home Sweet 
               Home</a>
               <a class="nav-item nav-link" href="Pond_AboutMe.html">About Me</a>
-              <a class="nav-item nav-link" href="res.html">Resume</a>
+              <a class="nav-item nav-link" href="Pond_Resume.html">Resume</a>
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" 
               href="pro.html" role="button" aria-haspopup="true" aria-expanded="false">
                 Projects</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="Enp.html">Entrepreneurship Project</a>
-                <a class="dropdown-item" href="w.html">Winch Project</a>
+                <a class="dropdown-item" href="Pond_Entraperuraship.html">Entrepreneurship Project</a>
+                <a class="dropdown-item" href="Pond_WinchProject.html">Winch Project</a>
                 <!--
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="pro.html">Projects</a> -->
               </div>
-              <a class="nav-item nav-link active" href="WorkExper.html">Work Experience
+              <a class="nav-item nav-link active" href="Pond_WorkExperience.html">Work Experience
               </a>
-              <a class="nav-item nav-link" href="cm.html">Contact Me</a>
+              <a class="nav-item nav-link" href="Pond_ContactMe.html">Contact Me</a>
             </nav>
         </div>
+        <!--banner starts here-->
         <div class="jumbotron col-sm-12 text-center">
            <h1>Work Experience</h1>
+           <p>Real world experience from school to beyond</p>
            <p>Feild trips & Influential Speakers</p>
         </div>
+        <!--banner ends here-->
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
-                    <img src="images/bio.png" width="200px" height="200px">
+                    <img class="border-for-img" src="images/bio.png" width="200px" height="200px">
                 </div>
                 <div class="col-sm-9">
                     <p>
@@ -101,17 +104,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <script src="../../assets/js/vendor/holder.min.js"></script>
     </body>
+    <!--footer starts here-->
     <footer>
-        <div class="jumbotron col-sm-12"> 
-            <div class="container">
+        <div class="container">
+            <div class="jumbotron col-sm-12">
                 <div class="row">
-                    <div class="col-sm-2">
-                        <img src="images/face.png" height="100px"> </div>
-                        <img src="images/insta.png" height="100px" width="100px">
-                        <img class="ml-auto" src="images/twitter2.png" height="100px">
-                    </div>
+                  <div class="col-sm-2">
+                    <img src="images/face.png" height="100px">
+                  </div>
+                  <img src="images/insta.png" height="100px" width="100px">
+                  <img class="ml-auto" src="images/twitter2.png" height="100px">
                 </div>
             </div>
         </div>
     </footer>
+    <!--and ends here-->
 </html>
