--- a/Pond_AboutMe.html
+++ b/Pond_AboutMe.html
@@ -10,70 +10,73 @@
               <a class="nav-item nav-link" href="index.html">Home Sweet 
               Home</a>
               <a class="nav-item nav-link active" href="Pond_AboutMe.html">About Me</a>
-              <a class="nav-item nav-link" href="res.html">Resume</a>
+              <a class="nav-item nav-link" href="Pond_Resume.html">Resume</a>
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" 
-              href="pro.html" role="button" aria-haspopup="true" aria-expanded="false">
+              href=" " role="button" aria-haspopup="true" aria-expanded="false">
                 Projects</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="Enp.html">Entrepreneurship Project</a>
-                <a class="dropdown-item" href="w.html">Winch Project</a>
+                <a class="dropdown-item" href="Pond_Entraperuraship.html">Entrepreneurship Project</a>
+                <a class="dropdown-item" href="Pond_WinchProject.html">Winch Project</a>
                 <!--
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="pro.html">Projects</a> -->
               </div>
-              <a class="nav-item nav-link" href="WorkExper.html">Work Experience
+              <a class="nav-item nav-link" href="Pond_WorkExperience.html">Work Experience
               </a>
-              <a class="nav-item nav-link" href="cm.html">Contact Me</a>
+              <a class="nav-item nav-link" href="Pond_ContactMe.html">Contact Me</a>
             </nav>
         </div>
+        <!--banner starts here-->
         <div class="jumbotron col-sm-12 text-center">
            <h1>About Me</h1>
            <p>Competent Worker</p>
         </div>
+        <!--banner ends here-->
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
-                    <img class="Ani" src="images/bio.png" width="200px" 
-                    height="200px">
-                    <h5>Contact Information</h5>
-                    <p>Email: maggiepond888@gmail.com</p>
+                    <img class="border-for-img" src="images/bio.png" width="200px" height="200px">
+                    <h1 class="justify-self">Email:</h1>
+                    <p>maggiepond888@gmail.com</p>
                 </div>
                 <div class="col-sm-9">
                     <p> 
-                        I am currently a Junior at Dublin High School. I am taking
-                        an advanced math course (Trigonometry With Pre-Calculus)
-                        and advanced life science (Honors Anatomy) course along
-                        with an engineering course (Computer Science Principles.
-                        As a Freshman I took a graphic design course (2-D 
-                        Drawing and Design) that went over the basics of visual 
-                        aesthetics and patterns, before being recruited into the
-                        Engineering Academy in my Sophmore year. Despite having 
-                        been an
-                        academy student, I have very little engineering experience.
-                        However, over the years, I have been taught to persevere
-                        and learn how to do things along the way - by my 
-                        family, teachers, and fellow students, therefore giving 
-                        me the tools to overcome new and exciting challenges.  I
-                        am able to persevere, encourage and cooperate with others,
-                         contribute ideas, and write reports or documents. 
+                        I am currently a Junior at Dublin High School. I am
+                        taking an advanced math course (Trigonometry With 
+                        Pre-Calculus) and advanced life science (Honors Anatomy)
+                        course along with an engineering course (Computer 
+                        Science Principles). As a Freshman I took a graphic 
+                        design course (2-D Drawing and Design) that went over 
+                        the basics of visual 
+                        aesthetics and patterns, before being recruited into 
+                        the Engineering Academy in my Sophmore year. Despite 
+                        being an academy student, I have very little engineering
+                        experience.However, over the years, I have been taught 
+                        to persevereand learn how to do things along the way
+                        - by my family, teachers, and fellow students, therefore
+                        giving me the tools to overcome new and exciting 
+                        challenges. I am able to persevere, encourage and 
+                        cooperate with others, contribute ideas, and write 
+                        reports or documents. 
                         Despite having few engineering experiences, I believe I 
-                        have been particularly useful on a POE project (1.3.2) where
-                        we were asked to build a prototype of a car. Although
-                        I did not create the original design or lead the team,
-                         I fixed an infuriating problem (friction caused by 
-                        leading sprocket pushing chain against platform) with the 
-                        gear and sprocket system that powered the wheels to a
-                        prototype of a car. This allowed me and my team to move for
-                        ward in fixing the motor and finding new ways to install
-                        the cells to the platform of the car. It also allowed
-                        the gears to turn and therefore the wheels to move. 
-                        In the future, I would like be a video game programmer
-                        and or webpage designer seeing as I find both graphic 
-                        design and computer programming particularly interesting.
-                        Although my future prospects are completely unrelated to
-                        mechanical engineering, it combines two interests of
-                        mine that are relatively impossible to combine 
-                        otherwise.
+                        have been particularly useful on a POE project (1.3.2) 
+                        where we were asked to build a prototype of a car. 
+                        Although I did not create the original design or lead 
+                        the team, I fixed an infuriating problem (friction 
+                        caused by leading sprocket pushing chain against 
+                        platform) with the gear and sprocket system that powered
+                        the wheels to a prototype of a car. This allowed me and 
+                        my team to move forward in fixing the motor and finding 
+                        new ways to installthe cells to the platform of the car.
+                        It also allowed the gears to turn and therefore the 
+                        wheels to move. In the future, I would like be a video 
+                        game programmer and or webpage designer seeing as I find
+                        both graphic design and computer programming 
+                        particularly interesting.
+                        Although my future prospects are completely unrelated
+                        to mechanical engineering, it combines two interests of 
+                        mine that are relatively impossible to combine otherwise
+                        .
                     </p>
                 </div>
             </div>
@@ -83,17 +86,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <script src="../../assets/js/vendor/holder.min.js"></script>
     </body>
+    <!--footer starts here-->
     <footer>
-        <div class="jumbotron col-sm-12"> 
-            <div class="container">
+        <div class="container">
+            <div class="jumbotron col-sm-12">
                 <div class="row">
                     <div class="col-sm-2">
-                        <img src="images/face.png" height="100px"> </div>
-                        <img src="images/insta.png" height="100px" width="100px">
-                        <img class="ml-auto" src="images/twitter2.png" height="100px">
+                        <img src="images/face.png" height="100px">
                     </div>
+                    <img src="images/insta.png" height="100px" width="100px">
+                    <img class="ml-auto" src="images/twitter2.png" height="100px">
                 </div>
             </div>
         </div>
     </footer>
+    <!--and ends here-->
 </html>
