--- a/Pond_Resume.html
+++ b/Pond_Resume.html
@@ -9,25 +9,27 @@
               <a class="nav-item nav-link" href="index.html">Home Sweet 
               Home</a>
               <a class="nav-item nav-link" href="Pond_AboutMe.html">About Me</a>
-              <a class="nav-item nav-link active" href="res.html">Resume</a>
+              <a class="nav-item nav-link active" href="Pond_Resume.html">Resume</a>
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" 
               href="pro.html" role="button" aria-haspopup="true" aria-expanded="false">
                 Projects</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="Enp.html">Entrepreneurship Project</a>
-                <a class="dropdown-item" href="w.html">Winch Project</a>
+                <a class="dropdown-item" href="Pond_Entraperuraship.html">Entrepreneurship Project</a>
+                <a class="dropdown-item" href="Pond_WinchProject.html">Winch Project</a>
                 <!--
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="pro.html">Projects</a> -->
               </div>
-              <a class="nav-item nav-link" href="WorkExper.html">Work Experience
+              <a class="nav-item nav-link" href="Pond_WorkExperience.html">Work Experience
               </a>
-              <a class="nav-item nav-link" href="cm.html">Contact Me</a>
+              <a class="nav-item nav-link" href="Pond_ContactMe.html">Contact Me</a>
             </nav>
         </div>
+        <!--banner starts here-->
         <div class="jumbotron col-sm-12 text-center">
            <h1>Resume</h1>
         </div>
+        <!--banner ends here-->
         <div class="container">
             <div class="row">
                 <div class="col-sm-9">
@@ -80,12 +82,10 @@
                     Basic Git <br>
                     Proficient Hypertext Markup Language (HTML)<br>
                     Proficient Cascading Style Sheets (CSS)<br>
-                    Bootstrap <br><br>
+                    Proficient Bootstrap <br><br>
                     </p>
                 </div>
                 <div class="col-sm-3">
-                    8151 Village Parkway
-                    Dublin CA,  94568
                     maggiepond888@gmail.com <br><br>
                     <div>
                         <h1>AWARDS</h1>
@@ -122,23 +122,25 @@
             </div>
         </div>
         </div>
-        <div class= "text-center"> For Pdf version, click <a href ="https://drive.google.com/file/d/1gonAthcISpxyyDYWHLT5FhlUD3NdLQET/view?usp=sharing" target="_blank">here</a></div>
+        <div class= "text-center"> For Pdf version, click <a href ="https://drive.google.com/file/d/1PhyfMn0n0P2CLdTmzKKVxGWi6KoO0DrN/view?usp=sharing" target="_blank">here</a></div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <script src="../../assets/js/vendor/holder.min.js"></script>
     </body>
+    <!--footer starts here-->
     <footer>
-        <div class="jumbotron col-sm-12"> 
-            <div class="container">
+        <div class="container">
+            <div class="jumbotron col-sm-12">
                 <div class="row">
-                    <div class="col-sm-2">
-                        <img src="images/face.png" height="100px"> </div>
-                        <img src="images/insta.png" height="100px" width="100px">
-                        <img class="ml-auto" src="images/twitter2.png" height="100px">
-                    </div>
+                  <div class="col-sm-2">
+                    <img src="images/face.png" height="100px">
+                  </div>
+                  <img src="images/insta.png" height="100px" width="100px">
+                  <img class="ml-auto" src="images/twitter2.png" height="100px">
                 </div>
             </div>
         </div>
     </footer>
+    <!--and ends here-->
 </html>
