--- a/index.html
+++ b/index.html
@@ -6,86 +6,108 @@
         <link href="carousel.css" rel="stylesheet">
     </head>
     <body>
-        <div class="container">
-           <nav class="nav nav-pills nav-fill">
-              <a class="nav-item nav-link active" href="index.html">Home Sweet 
-              Home</a>
-              <a class="nav-item nav-link" href="Pond_AboutMe.html">About Me</a>
-              <a class="nav-item nav-link" href="res.html">Resume</a>
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" 
-              href="pro.html" role="button" aria-haspopup="true" aria-expanded="false">
-                Projects</a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="Enp.html">Entrepreneurship Project</a>
-                <a class="dropdown-item" href="w.html">Winch Project</a>
-                <!--
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="pro.html">Projects</a> -->
-              </div>
-              <a class="nav-item nav-link" href="WorkExper.html">Work Experience
-              </a>
-              <a class="nav-item nav-link" href="cm.html">Contact Me</a>
-            </nav>
-            <div class="jumbotron col-sm-12">
-              <h1>Maggie Pond's Portfolio </h1>
-               <p>
+      <div class="container">
+       <nav class="nav nav-pills nav-fill">
+          <a class="nav-item nav-link active" href="index.html">Home Sweet 
+          Home</a>
+          <a class="nav-item nav-link" href="Pond_AboutMe.html">About Me</a>
+          <a class="nav-item nav-link" href="Pond_Resume.html">Resume</a>
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" 
+          href=" " role="button" aria-haspopup="true" aria-expanded="false">
+            Projects</a>
+            <!--dropdown starts here-->
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="Pond_Entraperuraship.html">
+              Entrepreneurship Project</a>
+            <a class="dropdown-item" href="Pond_WinchProject.html">
+              Winch Project</a>
+            <!--
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="pro.html">Projects</a> -->
+          </div>
+          <!--dropdown ends here-->
+          <a class="nav-item nav-link" href="Pond_WorkExperience.html">
+            Work Experience
+          </a>
+          <a class="nav-item nav-link" href="Pond_ContactMe.html">Contact Me</a>
+        </nav>
+        <br>
+            <!---carousel starts here-->
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="images/firework.gif" alt="First slide" height="600px">
+            <div class="carousel-caption-bet">
+              <h1>Welcome to Maggie Pond's Portfolio </h1>
+              <p>
                 A creative, interpersonal individual, dedicated to optimal work 
                 completion.
-               </p>
-             <div>
-               <a href="Pond_AboutMe.html" class="active">More about me</a>
-             </div>
-          </div>
-          <!---Slideshow starts here-->
-          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="images/cereal.jpg" alt="First slide" height="600px">
-                  <div class="carousel-caption-bet">
-                    <h1>Maggie Pond's Portfolio </h1>
-                     <p>
-                      A creative, interpersonal individual, dedicated to optimal work 
-                      completion.
-                     </p>
-                     <a href="Pond_AboutMe.html"><button type="button" class="btn btn-primary">More About Me</button></a>
-                  </div>
-                </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="images/cookies.jpg" alt="Second slide" height="600px">
-                  <div class="carousel-caption-bet">
-                    <h1>Maggie Pond's Portfolio </h1>
-                     <p>
-                      A creative, interpersonal individual, dedicated to optimal work 
-                      completion.
-                     </p>
-                     <a href="Pond_AboutMe.html"><button type="button" class="btn btn-primary">More About Me</button></a>
-                  </div>
-                </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="images/firework.gif" alt="Third slide" height="600px">
-                <div class="carousel-caption-bet">
-                  <h1>Maggie Pond's Portfolio </h1>
-                  <p>
-                  A creative, interpersonal individual, dedicated to optimal work 
-                  completion.
-                  </p>
-                  <a href="Pond_AboutMe.html"><button type="button" class="btn btn-primary">More About Me</button></a>
-                </div>
-              </div>
+              </p>
+              <a href="Pond_AboutMe.html"><button type="button" class="btn btn-primary">
+                More About Me</button></a>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
           </div>
-<!--experiment ends here-->
-            
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/cereal.jpg" alt="Second slide" height="600px">
+            <div class="carousel-caption-bet">
+              <h1>Entrepreneurship Project</h1>
+              <h5>Real world experience at school</h5>
+              <p>
+                During this project I showed great leadership
+                and perseverance as a primary builder for the project.
+              </p>
+              <a href="Pond_Entraperuraship.html"><button type="button" class="btn btn-primary">
+                More About Projects</button></a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/w.jpg" alt="Third slide" height="600px">
+            <div class="carousel-caption-bet">
+              <h1>Winch Project</h1>
+                <p>
+                 A creative, interpersonal individual, dedicated to optimal work 
+                 completion.
+                </p>
+                <a href="Pond_WinchProject.html"><button type="button" class="btn btn-primary">
+                  More About Projects</button></a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/workexperience.jpg" alt="Fourth slide" height="600px">
+            <div class="carousel-caption-bet">
+              <h1>Work Experience</h1>
+              <h5>Real world experience from school to beyond.</h5>
+              <a href="Pond_WorkExperience.html"><button type="button" class="btn btn-primary">
+                More About My Work Experience</button></a>
+            </div>
+          </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+<!--carousel ends here-->
+  <!--banner start here-->
+      <div class="jumbotron col-sm-12 text-center">
+        <h1>Maggie Pond's Portfolio </h1>
+         <p>
+          I would like be a video 
+          game programmer and or webpage designer seeing as I find <br>
+          both graphic design and computer programming 
+          particularly interesting.
+         </p>
+       <div>
+         <a href="Pond_Resume.html" class="active"><button type="button" class="btn btn-primary">
+           To my resume</button></a>
+       </div>
+    </div>
+    <!--banner ends here-->
+        <!--    
         </div> 
-        <!--
         <div class="container">
           <div class="row">
             <div class="col-sm-6">
@@ -103,7 +125,7 @@
           <div class="col-sm-6">
             <div class="card">
               <div class="card-body">
-                <img class="card-img-right float-right .custom-range::-webkit-slider-runnable-track" src="images/cookies.jpg" 
+                <img class="card-img-right float-right" src="images/cookies.jpg" 
                 width="200px" height="200px">
                 <strong><h7>Skills and Assets</h7></strong>
                 <h3 class="card-title">Resume</h3>
@@ -137,14 +159,14 @@
               </div>
             </div>
           </div>
+          -->
         </div>
-        -->
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
       <script src="../../assets/js/vendor/holder.min.js"></script>
-      
     </body>
+    <!--footer starts here-->
     <footer>
         <div class="container">
           <div class="jumbotron col-sm-12">
@@ -158,4 +180,5 @@
           </div>
         </div>
     </footer>
+    <!--and ends here-->
 </html>
