--- a/Pond_Projects.html
+++ b/Pond_Projects.html
@@ -55,7 +55,7 @@
                     </p>
                 </div>
                 <div class="col-sm-3">
-                    <img src="images/cereal.jpg" width="200px" height="200px">
+                    <span class="border-left border-right border-primary" width="40px" height="40px"><img src="images/cereal.jpg" width="200px" height="200px"></span>
                 </div>
             </div>
         </div>
