--- a/Pond_WinchProject.html
+++ b/Pond_WinchProject.html
@@ -1,7 +1,8 @@
 <!Doctype html>
 <html>
     <head>
-        <link href="bootstrap-4.1.2-dist/css/bootstrap.css" type="text/css" rel="stylesheet">
+        <link href="bootstrap-4.1.2-dist/css/bootstrap.css" type="text/css" 
+        rel="stylesheet">
         <title>Maggie Pond Was Here</title>
     </head>
     <body>
@@ -15,15 +16,19 @@
               href="pro.html" role="button" aria-haspopup="true" aria-expanded="false">
                 Projects</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="Pond_Entraperuraship.html">Entrepreneurship Project</a>
-                <a class="dropdown-item" href="Pond_WinchProject.html">Winch Project</a>
+                <a class="dropdown-item" href="Pond_Entrepreneurship.html">
+                    Entrepreneurship Project</a>
+                <a class="dropdown-item" href="Pond_WinchProject.html">
+                    Winch Project</a>
                 <!--
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="pro.html">Projects</a> -->
               </div>
-              <a class="nav-item nav-link" href="Pond_WorkExperience.html">Work Experience
+              <a class="nav-item nav-link" href="Pond_WorkExperience.html">
+                  Work Experience
               </a>
-              <a class="nav-item nav-link" href="Pond_ContactMe.html">Contact Me</a>
+              <a class="nav-item nav-link" href="Pond_ContactMe.html">
+                  Contact Me</a>
             </nav>
         </div>
         <!--banner starts here-->
@@ -37,20 +42,34 @@
                 <div class="col-sm-9">
                     <p> 
                      <h1 class="text-center">Winch Project</h1>
-                     <h5 class="text-center">(Project 1.2.5, Started- October 16, 2017 Completed- October 20, 2017, POE period 7)</h5>
-                     For the 1.2.5 project, or ' Winch Project ', my teammates and I were to build
-                     a prototype for a large scale winch that was to be used by  local construction
-                     company. We were asked to build a winch using a Fisher Tech motor capable of 
-                     lifting a weight of at least 100 grams, 30 centimeters upward. We were limited
-                     to materials found in the classroom and or approved by the teacher. For this 
-                     project, I was responsible for the building and maintenance of the winch, 
-                     meaning that I was the one responsible for the winch's ability to pull the 
-                     weight upward. The first day was spent building the winch's skeleton and the 
-                     rest of the time was spent improving the winch. During the course of this 
-                     project, I came in everyday during Gael period to improve and modify the 
-                     mechanism. This required me to test multiple configurations of the winch and 
-                     fixing the winch when the mechanism failed. Although I was not the primary 
-                     builder or developer, I was persistent and unyielding in the optimization of 
+                     <h5 class="text-center">(Project 1.2.5, Started- October
+                     16, 2017 Completed- October 20, 2017, POE period 7)</h5>
+                     For the 1.2.5 project, or ' Winch Project ', my teammates
+                     and I were to build
+                     a prototype for a large scale winch that was to be used by
+                     local construction
+                     company. We were asked to build a winch using a Fisher Tech
+                     motor capable of 
+                     lifting a weight of at least 100 grams, 30 centimeters
+                     upward. We were limited
+                     to materials found in the classroom and or approved by the
+                     teacher. For this 
+                     project, I was responsible for the building and maintenance
+                     of the winch, 
+                     meaning that I was the one responsible for the winch's
+                     ability to pull the 
+                     weight upward. The first day was spent building the winch's
+                     skeleton and the 
+                     rest of the time was spent improving the winch. During the
+                     course of this 
+                     project, I came in everyday during Gael period to improve
+                     and modify the 
+                     mechanism. This required me to test multiple configurations
+                     of the winch and 
+                     fixing the winch when the mechanism failed. Although I was
+                     not the primary 
+                     builder or developer, I was persistent and unyielding in
+                     the optimization of 
                      the winch. <br><br>
                       Documentation: <a href= "https://docs.google.com/document/d/1zr722JBLGvn368AtzOZLZnid8byL4MBNttXDKlFORGo/edit" target="_blank">Here</a><br>
                       Presentation: <a href= "https://docs.google.com/presentation/d/1Ca1DbJeaI5Gcf8gikZBT1j3RabulsRXq_iFcTt_J3Hc/edit" target="_blank">Here</a>
@@ -61,9 +80,15 @@
                 </div>
             </div>
         </div>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+    integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+    crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" 
+    integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+    crossorigin="anonymous"></script>
     <script src="../../assets/js/vendor/holder.min.js"></script>
     </body>
     <!--footer starts here-->
