--- a/Pond_WorkExperience.html
+++ b/Pond_WorkExperience.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <link href="bootstrap-4.1.2-dist/css/bootstrap.css" type="text/css" rel="stylesheet">
+        <link href="bootstrap-4.1.2-dist/css/bootstrap.css" type="text/css" 
+        rel="stylesheet">
         <title>Maggie Pond Was Here</title>
     </head>
     <body>
@@ -14,15 +15,19 @@
               href="pro.html" role="button" aria-haspopup="true" aria-expanded="false">
                 Projects</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="Pond_Entraperuraship.html">Entrepreneurship Project</a>
-                <a class="dropdown-item" href="Pond_WinchProject.html">Winch Project</a>
+                <a class="dropdown-item" href="Pond_Entrepreneurship.html">
+                    Entrepreneurship Project</a>
+                <!--<a class="dropdown-item" href="Pond_WinchProject.html">
+                    Winch Project</a>-->
                 <!--
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="pro.html">Projects</a> -->
               </div>
-              <a class="nav-item nav-link active" href="Pond_WorkExperience.html">Work Experience
+              <a class="nav-item nav-link active" href="Pond_WorkExperience.html">
+                  Work Experience
               </a>
-              <a class="nav-item nav-link" href="Pond_ContactMe.html">Contact Me</a>
+              <a class="nav-item nav-link" href="Pond_ContactMe.html">Contact Me
+              </a>
             </nav>
         </div>
         <!--banner starts here-->
@@ -35,73 +40,98 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
-                    <img class="border-for-img" src="images/bio.png" width="200px" height="200px">
+                    <div>
+                        <img class="image custom-range border-for-img" 
+                        src="images/bio.png" width="200px" height="200px">
+                        <a class="contactmebutton" href="Pond_ContactMe.html">
+                            <button class="btn btn-primary">
+                                Contact Me!
+                            </button>
+                        </a>
+                    </div>
                 </div>
                 <div class="col-sm-9">
-                    <p>
-                        The majority of my work experience has taught and 
-                        motivated me to be a respectful, cooperative coworker.
-                        Mrs. Sharbach, my eighth grade teacher (2015-2016), 
-                        taught me and my classmates to fair, respectful people.
-                        While Mrs. Sharbach was, officially, my English and 
-                        History teacher, she was our collective mentor; she 
-                        pushed us to become better people, chastised us when 
-                        we were rude, and helped us grow academically. She told
-                        us what she thought, why she thought it, and never 
-                        looked at us as 'just students'. At times, honestly,
-                        she did push us too hard but always made sure we were
-                        learning and growing as both students and human beings.
-                        Mrs. Sharbach is the epitome of an amazing teacher. She
-                        encouraged us to give back to our community to anyone 
-                        and everyone. She forced us to work with people we 
-                        wouldn't typically work with so we would learn to work
-                        with anyone and everyone. She made all of us more 
-                        flexible, cooperative and respectful people and I can 
-                        honestly say I would be a complete failure at all three
-                        had I not been in her class. As she liked to say she 
-                        had always taught us to be good people', and I know that
-                        today I am both a better person and a better worker 
-                        because of her. <br>
-                        <br> In 2017, I, along with other students from Dublin High,
-                        visited and were shown around the SAP campus in San 
-                        Ramon. Once there we were divided into 2 groups 
-                        (one would hear a lecture and the other would be 
-                        shown around). The first lecture concerned the 
-                        achievement of success and the second pertained 
-                        to emotional intelligence, or rather concern for 
-                        one's coworkers. To me, the lecture on emotional 
-                        intelligence was particularly important as the ability
-                        to respect one's coworkers is an essential but 
-                        underestimated skill. After this, we were shown around 
-                        campus and what struck me most was how absolutely 
-                        beautiful the campus was and, to me it seemed, how 
-                        little menial labor
-                        was being performed even in the workplace areas. It also
-                        struck me how employees were allowed to draw on the 
-                        walls as a means of communication or play. Overall, 
-                        the campus appeared to be a collection of tranquil, 
-                        intelligent people who completely lacked workplace
-                        stress. This, from my perspective, seemed to be a 
-                        result of the employees' cooperative and organized 
-                        behavior. What I learnt on this field trip was that 
-                        work doesn't have to be laborious as long as one is 
-                        willing to cooperate and respect one's coworkers to 
-                        get work done. To reiterate, from these experiences I 
-                        have learnt to be respectful, cooperative worker.<br><br>
-                        From my volunteer experience that concerns, primarily,
-                        interacting with children I have bettered my patience 
-                        and communicative skills. I started volunteering at 
-                        Crosspoint Church in November of 2018. From my volunteer 
-                        work, I can confidently say that I would make cooperative
-                        and well-organized employee capable even of assuming 
-                        leadership roles when necessary.
-                    </p>
+                    <div class="indent">
+                        <p>
+                            The majority of my work experience has taught and 
+                            motivated me to be a respectful, cooperative coworker.
+                            Mrs. Sharbach, my eighth grade teacher (2015-2016), 
+                            taught me and my classmates to fair, respectful people.
+                            While Mrs. Sharbach was, officially, my English and 
+                            History teacher, she was our collective mentor; she 
+                            pushed us to become better people, chastised us when 
+                            we were rude, and helped us grow academically. She told
+                            us what she thought, why she thought it, and never 
+                            looked at us as 'just students'. At times, honestly,
+                            she did push us too hard but always made sure we were
+                            learning and growing as both students and human beings.
+                            Mrs. Sharbach is the epitome of an amazing teacher. She
+                            encouraged us to give back to our community to anyone 
+                            and everyone. She forced us to work with people we 
+                            wouldn't typically work with so we would learn to work
+                            with anyone and everyone. She made all of us more 
+                            flexible, cooperative and respectful people and I can 
+                            honestly say I would be a complete failure at all three
+                            had I not been in her class. As she liked to say she 
+                            had always taught us to be good people', and I know that
+                            today I am both a better person and a better worker 
+                            because of her.
+                        </p>
+                    </div>
+                    <div class="indent">
+                        <p>
+                            In 2017, I, along with other students from Dublin
+                            High,
+                            visited and were shown around the SAP campus in San 
+                            Ramon. Once there we were divided into 2 groups 
+                            (one would hear a lecture and the other would be 
+                            shown around). The first lecture concerned the 
+                            achievement of success and the second pertained 
+                            to emotional intelligence, or rather concern for 
+                            one's coworkers. To me, the lecture on emotional 
+                            intelligence was particularly important as the ability
+                            to respect one's coworkers is an essential but 
+                            underestimated skill. After this, we were shown around 
+                            campus and what struck me most was how absolutely 
+                            beautiful the campus was and, to me it seemed, how 
+                            little menial labor
+                            was being performed even in the workplace areas. It also
+                            struck me how employees were allowed to draw on the 
+                            walls as a means of communication or play. Overall, 
+                            the campus appeared to be a collection of tranquil, 
+                            intelligent people who completely lacked workplace
+                            stress. This, from my perspective, seemed to be a 
+                            result of the employees' cooperative and organized 
+                            behavior. What I learnt on this field trip was that 
+                            work doesn't have to be laborious as long as one is 
+                            willing to cooperate and respect one's coworkers to 
+                            get work done. To reiterate, from these experiences I 
+                            have learnt to be respectful, cooperative worker.
+                        </p>
+                    </div>
+                    <div class="indent">
+                        <p>
+                            From my volunteer experience that concerns, primarily,
+                            interacting with children I have bettered my patience 
+                            and communicative skills. I started volunteering at 
+                            Crosspoint Church in November of 2018. From my volunteer 
+                            work, I can confidently say that I would make cooperative
+                            and well-organized employee capable even of assuming 
+                            leadership roles when necessary.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+    integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+    crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+    integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+    crossorigin="anonymous"></script>
     <script src="../../assets/js/vendor/holder.min.js"></script>
     </body>
     <!--footer starts here-->
@@ -110,10 +140,22 @@
             <div class="jumbotron col-sm-12">
                 <div class="row">
                   <div class="col-sm-2">
-                    <img src="images/face.png" height="100px">
-                  </div>
-                  <img src="images/insta.png" height="100px" width="100px">
-                  <img class="ml-auto" src="images/twitter2.png" height="100px">
+                        <a href="Pond_ContactMe.html">
+                            <img src="images/face.png" height="100px">
+                        </a>
+                    </div>
+                    <div class="col-sm-2">
+                        <a href="Pond_ContactMe.html">
+                             <img src="images/insta.png" height="100px" width="100px">
+                        </a>
+                    </div>
+                    <div class="col-sm-6">
+                    </div>
+                    <div class="col-sm-2">
+                        <a href="Pond_ContactMe.html">
+                            <img class="ml-auto" src="images/twitter2.png" height="100px">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
