--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             Projects</a>
             <!--dropdown starts here-->
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="Pond_Entraperuraship.html">
+            <a class="dropdown-item" href="Pond_Entrepreneurship.html">
               Entrepreneurship Project</a>
-            <a class="dropdown-item" href="Pond_WinchProject.html">
-              Winch Project</a>
+            <!--<a class="dropdown-item" href="Pond_WinchProject.html">
+              Winch Project</a>-->
             <!--
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="pro.html">Projects</a> -->
@@ -33,22 +33,28 @@
         </nav>
         <br>
             <!---carousel starts here-->
-      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div id="carouselExampleControls" class="carousel slide" 
+      data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="images/firework.gif" alt="First slide" height="600px">
-            <div class="carousel-caption-bet">
-              <h1>Welcome to Maggie Pond's Portfolio </h1>
-              <p>
+            <img class="d-block w-100" src="images/firework.gif" 
+            alt="First slide" height="600px">
+            <div class="carousel-caption-bet black">
+               <h1 class="black">Welcome to Maggie Pond's Portfolio </h1>
+              <p class="black">
                 A creative, interpersonal individual, dedicated to optimal work 
                 completion.
-              </p>
-              <a href="Pond_AboutMe.html"><button type="button" class="btn btn-primary">
-                More About Me</button></a>
+              </p> 
+              <a href="Pond_AboutMe.html">
+                <button type="button" class="btn btn-primary">
+                  More About Me
+                </button>
+              </a>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="images/cereal.jpg" alt="Second slide" height="600px">
+            <img class="d-block w-100" src="images/cereal.jpg" 
+            alt="Second slide" height="600px">
             <div class="carousel-caption-bet">
               <h1>Entrepreneurship Project</h1>
               <h5>Real world experience at school</h5>
@@ -56,36 +62,49 @@
                 During this project I showed great leadership
                 and perseverance as a primary builder for the project.
               </p>
-              <a href="Pond_Entraperuraship.html"><button type="button" class="btn btn-primary">
-                More About Projects</button></a>
+              <a href="Pond_Entrepreneurship.html">
+                <button type="button" class="btn btn-primary">
+                  More About Projects
+                </button>
+              </a>
             </div>
           </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="images/w.jpg" alt="Third slide" height="600px">
+          <!--<div class="carousel-item">
+            <img class="custom-range d-block w-100" src="images/w.jpg" 
+            alt="Third slide" height="600px">
             <div class="carousel-caption-bet">
               <h1>Winch Project</h1>
                 <p>
                  A creative, interpersonal individual, dedicated to optimal work 
                  completion.
                 </p>
-                <a href="Pond_WinchProject.html"><button type="button" class="btn btn-primary">
-                  More About Projects</button></a>
+                <a href="Pond_WinchProject.html">
+                  <button type="button" class="btn btn-primary">
+                    More About Projects
+                  </button>
+                </a>
             </div>
-          </div>
+          </div>-->
           <div class="carousel-item">
-            <img class="d-block w-100" src="images/workexperience.jpg" alt="Fourth slide" height="600px">
+            <img class="custom-range d-block w-100" src="images/workexperience.jpg" 
+            alt="Fourth slide" height="600px">
             <div class="carousel-caption-bet">
               <h1>Work Experience</h1>
               <h5>Real world experience from school to beyond.</h5>
-              <a href="Pond_WorkExperience.html"><button type="button" class="btn btn-primary">
-                More About My Work Experience</button></a>
+              <a href="Pond_WorkExperience.html">
+                <button type="button" class="btn btn-primary">
+                  More About My Work Experience
+                </button>
+              </a>
             </div>
           </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#carouselExampleControls" 
+        role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#carouselExampleControls" 
+        role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
@@ -101,8 +120,11 @@
           particularly interesting.
          </p>
        <div>
-         <a href="Pond_Resume.html" class="active"><button type="button" class="btn btn-primary">
-           To my resume</button></a>
+        <a href="Pond_Resume.html" class="active">
+           <button type="button" class="btn btn-primary">
+             To my resume
+           </button>
+        </a>
        </div>
     </div>
     <!--banner ends here-->
@@ -161,9 +183,15 @@
           </div>
           -->
         </div>
-      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+      integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" 
+      crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+      integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+      crossorigin="anonymous"></script>
       <script src="../../assets/js/vendor/holder.min.js"></script>
     </body>
     <!--footer starts here-->
@@ -172,10 +200,22 @@
           <div class="jumbotron col-sm-12">
             <div class="row">
               <div class="col-sm-2">
-                <img src="images/face.png" height="100px">
+                <a href="Pond_ContactMe.html">
+                  <img src="images/face.png" height="100px">
+                </a>
               </div>
-              <img src="images/insta.png" height="100px" width="100px">
-              <img class="ml-auto" src="images/twitter2.png" height="100px">
+              <div class="col-sm-2">
+                <a href="Pond_ContactMe.html">
+                  <img src="images/insta.png" height="100px" width="100px">
+                </a>
+              </div>
+              <div class="col-sm-6">
+              </div>
+              <div class="col-sm-2">
+                <a href="Pond_ContactMe.html">
+                  <img class="ml-auto" src="images/twitter2.png" height="100px">
+                </a>
+              </div>
             </div>
           </div>
         </div>
